# vscode-cmake

./: CMakeLists.txt  install-qt6
